Make new tasks render on page with a form

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,10 @@
                 <input type="checkbox" name="completion" id="completion">
                 <label for="completion">Complete?</label>
             </div>
+            <div>
+                <button id="taskConfirmBtn">Confirm</button>
+                <button id="taskCancelBtn">Cancel</button>
+            </div>
         </form>
     </dialog>
 </body>
